<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_category_black_24dp"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_discovery"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/title_discovery" />

    <item
        android:id="@+id/navigation_study"
        android:icon="@drawable/ic_baseline_book_24"
        android:title="@string/title_study" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_account_box_24"
        android:title="@string/title_account" />
</menu>