<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splash">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.moocmock.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_category"
            app:destination="@id/navigation_category" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_discovery"
            app:destination="@id/navigation_discovery" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_study"
            app:destination="@id/navigation_study" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_account"
            app:destination="@id/navigation_account" />
    </fragment>

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.moocmock.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_discovery"
        android:name="com.example.moocmock.ui.discovery.DiscoveryFragment"
        android:label="@string/title_discovery"
        tools:layout="@layout/fragment_discovery" />

    <fragment
        android:id="@+id/navigation_study"
        android:name="com.example.moocmock.ui.study.StudyFragment"
        android:label="@string/title_study" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.moocmock.ui.account.AccountFragment"
        android:label="@string/title_account">
        <action
            android:id="@+id/action_navigation_account_to_webview2"
            app:destination="@id/webview2" />
    </fragment>
    <fragment
        android:id="@+id/splash"
        android:name="com.example.moocmock.Splash"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_navigation_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="false"
            app:popUpTo="@id/splash"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/webview2"
        android:name="com.example.moocmock.Webview"
        android:label="fragment_webview"
        tools:layout="@layout/fragment_webview" />
</navigation>